kubernetes/apps/default/atuin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: default
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    external-dns.alpha.kubernetes.io/public: true
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - sh.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 80
